--- a/investing.yml.example
+++ b/investing.yml.example
@@ -1,6 +1,54 @@
 ---
-BTC: 100
-LTC: 100
-ETH: 100
-DASH : 100
-ZEC: 100
+Investing:  # USD
+    BTC: 100
+    LTC: 100
+    ETH: 100
+    DASH: 100
+    ZEC: 100
+
+# https://alloscomp.com/bitcoin/calculator
+# http://www.coinwarz.com/calculators/litecoin-mining-calculator/
+# https://etherscan.io/ether-mining-calculator
+# http://www.coinwarz.com/calculators/dash-mining-calculator/
+# https://www.coinwarz.com/calculators/zcash-mining-calculator/
+
+Coins:  # 2017-07-13
+    BTC: 0.00000355   # coins per day for 10GH/s
+    LTC: 0.00182703   # per 1 MH/s
+    ETH: 0.000034865  # per 100 KH/s
+    DASH: 0.00007764  # per 1 MH/s
+    ZEC: 0.00000267   # per 0.1 H/s
+
+Mining:
+    HF:  # https://hashflare.io/#plans
+        BTC:
+            mine: 1.2      # USD per 10GH/s
+            maint: 0.0035  # USD fee per 10GH/s per day
+        LTC:
+            mine: 13.5     # USD per 1 MH/s
+            maint: 0.01    # USD fee per 1 MH/s per day
+        ETH:
+            mine: 2.2      # USD per 100 KH/s
+            maint: 0       # 1 year contract
+        DASH:
+            mine: 5.8      # USD per 1 MH/s
+            maint: 0       # 1 year contract
+        ZEC:
+            mine: 2.0      # USD per 0.1 H/s
+            maint: 0       # unavailable
+    GM:  # https://www.genesis-mining.com/pricing
+        BTC:
+            mine: 1.5       # USD per 10GH/s
+            maint: 0.0028   # USD fee per 10GH/s per day
+        LTC:
+            mine: 14        # USD per 1 MH/s
+            maint: 0        # out of stock
+        ETH:
+            mine: 2.99      # USD per 100 KH/s
+            maint: 0        # 2 years contract
+        DASH:
+            mine: 6         # USD per 1 MH/s
+            maint: 0        # 2 years contract
+        ZEC:
+            mine: 0.739    # USD per 0.1 H/s
+            maint: 0       # out of stock 1 year contract
